# algs-c

./: CMakeLists.txt
lib/data-structures/: linked-list.c  linked-list.h
lib/recursion/: recursion.c  recursion.h
lib/searches/: search.c  search.h
lib/sorts/: quick_sort.c  quick_sort.h  selection_sort.c  selection_sort.h  sorts.c  sorts.h
lib/utils/: list.c  list.h  system_extensions.c  system_extensions.h
src/: algs.c  main.c
src/actions/data-structure/: data_structure_actions.c  data_structure_actions.h
src/actions/data-structure/linked-list/: linked_list_actions.c  linked_list_actions.h
src/actions/main/: main_actions.c  main_actions.h
src/actions/recursion/: recursion_actions.c  recursion_actions.h
src/actions/recursion/factorial/: factorial_actions.c  factorial_actions.h
src/actions/recursion/sum_of_list_items/: sum_of_list_items_actions.c  sum_of_list_items_actions.h
src/actions/search/: search_actions.c  search_actions.h
src/actions/sort/: sort_actions.c  sort_actions.h
src/actions/sort/quick/: quick_sort_actions.c  quick_sort_actions.h
src/actions/sort/selection/: selection_sort_actions.c  selection_sort_actions.h
src/lib/data-structures/: linked-list.h
src/lib/sorts/: sorts.c  sorts.h
src/states/: main_actions.c  main_actions.h  search_actions.c  search_actions.h
src/states/main/: main_actions.c
src/states/search/: search_actions.c  search_actions.h
src/states/sort/: sort_actions.c  sort_actions.h
test/: tests.c  tests.h
